# Fossilize

./: CMakeLists.txt  fossilize.cpp  fossilize.hpp
layer/: CMakeLists.txt  VK_LAYER_RGA_pipeline_extraction_linux.json  device.cpp  dispatch.cpp  exports.def
rga/Vulkan/Include/: rgDefinitions.h  rgPipelineTypes.h  rgPsoFactoryVulkan.h  rgPsoSerializerVulkan.h
rga/Vulkan/Include/Converters/: rgFossilizeConverter.h
rga/Vulkan/Src/: rgPipelineTypes.cpp  rgPsoFactoryVulkan.cpp  rgPsoSerializerVulkan.cpp
rga/Vulkan/Src/Converters/: rgFossilizeConverter.cpp
